--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Read/write integers and string",
   "license": "0BSD",
   "require": {
-    "php": "8.1.*",
+    "php": "^8.1",
     "php-64bit": "*"
   },
   "autoload": {
