--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,9 @@
   "description": "Read/write integers and string",
   "license": "0BSD",
   "require": {
-    "php": "^8.1",
-    "php-64bit": "*"
+    "php": "^8.5",
+    "php-64bit": "*",
+    "iggyvolz/simple-attribute-reflection": "^1.0"
   },
   "autoload": {
     "psr-4": {
